[package]
name = "c_lexer"
version = "0.1.1"
authors = ["lsongzhi <lsongzhi@163.com>"]
repository = "https://github.com/songzhi/c_lexer"
readme = "README.md"
keywords = ["C", "lexer", "parser", "tokenizer"]
categories = ["parser-implementations"]
license = "MIT"
description = "C lexer"
edition = "2018"

[dependencies]
phf = { version = "0.7", features = ["macros"] }
internship = "0.6"

[badges]
travis-ci = { repository = "songzhi/c_lexer", branch = "master" }

[profile.release]
lto = true

[profile.bench]
debug = true
lto = true